changelog for ephFrame
----------------------

2009-07-09
+ fixed missing created update field when inserting new model entries with multiple behaviors
+ added theming, which includes js/css search in theme directory
+ fixed js packer to append line-feed at end of packed js files
+ added after[Action] and before[Action] callbacks in the controller
+ added subversion keywords and new formatted copyright message on every file
+ SGMLAttributes don’t render attributes with empty values anymore
+ DBDSN in db.php can be an array, enabling socket connections with it
+ missing afterAction callback for controller added (called after components)
+ empty cookie values return false now
+ fixed object->__mergeParentProperty to merge correctly using ->{$varname}
+ File->basename(true) will return with extension and false without extension
+ Dir->newFile can create new Files on the fly
+ CSS/JS Packer use Dir class to create Packed files now
+ added default view for missingtable error message
+ form->configure uses varchar length from model fields as maxLength for input fields
+ renamed Set class to IndexedArray!!!
+ fixed issue with String::substr() on php 5.2.6
+ imageconvolution added if missing in ImageSharpenFilter (needs high performance!)
+ image uses imageantialias only if function exists
+ replaced %1% placeholders to :[name] in string::substitute
+ added alias for string::substitute - string::insert
+ new formating for files skipping ?> in files and no tabs in PHPDocBlocks

2009-05-25
+ added model behaviors callable from every model
+ controller actions can return false to render 404 page
+ added NestedSetBehavior, FlagableBehavior and PositionableBehavior
+ added Form Field Classes and Form with configure
+ Log Levels now used correctly
+ Model can return random sets
+ Model can return simple list of fields from table
+ Model->findBy supports depth parameter
+ Model query class caches query and results
+ Model can now unbind and bind other models on the fly